cdk.out/vpc.template.json
{
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.1.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "edx-build-aws-vpc"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/VPC"
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "edx-igw"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/InternetGateway"
      }
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": {
          "Ref": "InternetGateway"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/AttachGateway"
      }
    },
    "EIP1": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "DependsOn": [
        "AttachGateway"
      ],
      "Metadata": {
        "aws:cdk:path": "vpc/EIP1"
      }
    },
    "PrivateSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.3.0/24",
        "VpcId": {
          "Ref": "VPC"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "Tags": [
          {
            "Key": "name",
            "Value": "edx-subnet-private-a"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PrivateSubnet1"
      }
    },
    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.1.0/24",
        "VpcId": {
          "Ref": "VPC"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "edx-subnet-public-a"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PublicSubnet1"
      }
    },
    "NAT1": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "EIP1",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet1"
        }
      },
      "DependsOn": [
        "AttachGateway",
        "EIP1"
      ],
      "Metadata": {
        "aws:cdk:path": "vpc/NAT1"
      }
    },
    "PrivateRouteTable1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "edx-routetable-private1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PrivateRouteTable1"
      }
    },
    "PrivateRoute1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NAT1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PrivateRoute1"
      }
    },
    "PrivateRouteAssociation1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable1"
        },
        "SubnetId": {
          "Ref": "PrivateSubnet1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PrivateRouteAssociation1"
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "edx-routetable-public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PublicRouteTable"
      }
    },
    "PublicDefaultRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "InternetGateway"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PublicDefaultRoute"
      }
    },
    "PublicRouteAssociation1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnet1"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PublicRouteAssociation1"
      }
    },
    "EIP2": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      },
      "DependsOn": [
        "AttachGateway"
      ],
      "Metadata": {
        "aws:cdk:path": "vpc/EIP2"
      }
    },
    "PrivateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.4.0/24",
        "VpcId": {
          "Ref": "VPC"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "edx-subnet-private-b"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PrivateSubnet2"
      }
    },
    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.1.2.0/24",
        "VpcId": {
          "Ref": "VPC"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": {
                "Ref": "AWS::Region"
              }
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "edx-subnet-public-b"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PublicSubnet2"
      }
    },
    "NAT2": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "EIP2",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet2"
        }
      },
      "DependsOn": [
        "AttachGateway",
        "EIP2"
      ],
      "Metadata": {
        "aws:cdk:path": "vpc/NAT2"
      }
    },
    "PrivateRouteTable2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "edx-routetable-private2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PrivateRouteTable2"
      }
    },
    "PrivateRoute2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "NAT2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PrivateRoute2"
      }
    },
    "PrivateRouteAssociation2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PrivateRouteTable2"
        },
        "SubnetId": {
          "Ref": "PrivateSubnet2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PrivateRouteAssociation2"
      }
    },
    "PublicRouteAssociation2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "PublicRouteTable"
        },
        "SubnetId": {
          "Ref": "PublicSubnet2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "vpc/PublicRouteAssociation2"
      }
    }
  },
  "Outputs": {
    "vpcoutput": {
      "Description": "VPC",
      "Value": {
        "Ref": "VPC"
      },
      "Export": {
        "Name": "vpc"
      }
    },
    "PublicSubnet1output": {
      "Description": "Public Subnet 1",
      "Value": {
        "Ref": "PublicSubnet1"
      },
      "Export": {
        "Name": "PublicSubnet1"
      }
    },
    "PublicSubnet2output": {
      "Description": "Public Subnet 2",
      "Value": {
        "Ref": "PublicSubnet2"
      },
      "Export": {
        "Name": "PublicSubnet2"
      }
    },
    "PrivateSubnet1output": {
      "Description": "Private Subnet 1",
      "Value": {
        "Ref": "PrivateSubnet1"
      },
      "Export": {
        "Name": "PrivateSubnet1"
      }
    },
    "PrivateSubnet2output": {
      "Description": "Private Subnet 2",
      "Value": {
        "Ref": "PrivateSubnet2"
      },
      "Export": {
        "Name": "PrivateSubnet2"
      }
    },
    "Private1az": {
      "Description": "PrivateSubnet1 az",
      "Value": {
        "Fn::GetAtt": [
          "PrivateSubnet1",
          "AvailabilityZone"
        ]
      },
      "Export": {
        "Name": "PrivateSubnet1az"
      }
    },
    "Private2az": {
      "Description": "PrivateSubnet2 az",
      "Value": {
        "Fn::GetAtt": [
          "PrivateSubnet2",
          "AvailabilityZone"
        ]
      },
      "Export": {
        "Name": "PrivateSubnet2az"
      }
    }
  }
}
